--- a/htscplaquettebethe.tex
+++ b/htscplaquettebethe.tex
@@ -16,23 +16,25 @@
 
 \begin{document}
 
-\title{$d_{x^2-y^2}$-wave Pairing emerging from a Quantum Critical Point of the Hubbard-Plaquette in Infinite Dimensions}
+\title{$d_{x^2-y^2}$-wave Pairing emerging from Quantum Fluctuations and Criticality of the Hubbard-Plaquette in Infinite Dimensions}
 \author{Malte~Harland}
+\author{(...)}
 \affiliation{Institut f\"ur Theoretische Physik, Universit\"at
 Hamburg, Jungiusstra{\ss}e 9, 20355, Hamburg, Germany}
 \date{\today}
 \begin{abstract}
-  We investigate the high-temperature superconductivity pairing phenomenon on the artificial plaquette -- Bethe lattice by means of the Dynamical mean-field theory. The theory provides an exact solution to the model with full spatial and temporal fluctuations. TODO CTHYB singlet, infinite dimensions, quadrupolar Bethe, exact, Hubbard, local-dynamical correlations, finite temperature
+  We investigate the high-temperature superconductivity pairing phenomenon on the artificial plaquette -- Bethe lattice by means of the Dynamical mean-field theory. The theory provides an exact solution to the model with full spatial and temporal fluctuations. TODO CTHYB singlet, infinite dimensions, quadruple Bethe, exact, Hubbard, local-dynamical correlations, finite temperature
 \end{abstract}
 \maketitle
 
 \section{Introduction}
-TODO
+TODO\cite{Scalapino2012}
 cuprates\cite{Damascelli2003};
 antiferromagnetism;
 experiments; cuprates;
 scope of this project(?): ``microscopic'' condensation, not macroscopic condensation;
 trace pairing mechanics back to plaquette physics which is often used as the auxiliary model for d-wave superconductivity investigations
+emphasize fluctuations, our model treats them exact
 
 \section{Model}
 \subsection{Hubbard Model}
@@ -41,21 +43,31 @@ We are interested in pairing correlations stemming from a complex interaction in
   \label{eq:hubbard}
   H_{tU}=\sum_{ij\sigma}t_{ij}c^{\dagger}_{i\sigma}c_{j\sigma}-\mu\sum_{i\sigma}c^{\dagger}_{i\sigma}c_{j\sigma}+U\sum_ic^{\dagger}_{i\up}c^{\dagger}_{i\dn}c_{i\dn}c_{i\up},
 \end{equation}
-which contains a hopping term $t_{i,j}$, that for lattice structures becomes diagonal $k$-space and therefore for lattice structures promotes delocalization of the charge (non-interacting limit), whereas the screened, local coulomb repulsion $U$ is diagonal is site-space and promotes charge localization (atomic limit). 
+which contains a hopping term $t_{i,j}$, that for lattice structures becomes diagonal $k$-space and therefore for lattice structures promotes delocalization of the charge (non-interacting limit), whereas the screened, local coulomb repulsion $U$ is diagonal is site-space and promotes charge localization (atomic limit). Although written in second quantization the Hubbard model looks simple, it covers a broad range of phenomena, such as metals, heavy fermions, antiferromagnetic order and the Mott insulators. We choose our parameters according to the cuprates, i.e. $t^\prime= -0.3t$.
 %Decoupling the quartic interaction by a Hubbard-Stratonovich transformation\cite{AlexanderAltland2010} in the cooper-channel, i.e. using the fermion bilinears ($c^{\dagger}_{\up} c^{\dagger}_{\dn}$)($c_{\dn} c_{\up}$), shows that the $U$-term provides an overlapp with singlet-pairing -- "anomalous" -- terms. In combination with the anisotropy of the hopping, with e.g. $Z_4$-symmetry, we have a reasonable candidate for a minimal model of the $d$-wave pairing as it is observed in htsc-superconductors.
 The $d$-wave pairing order parameter $\Psi$ we define as
 \begin{equation}
   \label{eq:dwaveop}
-  \Psi_{dSC} = \left< c^\dagger_X c^\dagger_{-X} - c^\dagger_Y c^\dagger_{-Y}\right>.
+  2\Psi_{dSC} = \left< c^\dagger_X c^\dagger_{-X} - c^\dagger_Y c^\dagger_{-Y}\right>.
 \end{equation}
 Clearly, a field coupling to $\Psi$ breaks the $U(1)$-symmetry and states with finite $\Psi$ thus have some degree of coherence, i.e. an indefinite number of particles emerging from a condensation into a zero-momentum-pair state.\cite{AlexanderAltland2010,HenrikBruus2004}
-\subsection{Quadrupolar Bethe-Lattice}
+\subsection{Quadruple Bethe-Lattice}
 \begin{figure}[th]
   \includegraphics[scale=1]{structureplot/quadbethestructure_plt}
-  \caption{Quadrupolar Bethe lattice, four Bethe lattices(dotted lines) interconnected via plaquettes(solid lines). The coordination number for each Bethe lattice of this figure is set to $z=3$ for convenience.}
+  \caption{Quadruple Bethe lattice, four Bethe lattices(dotted lines) interconnected via plaquettes(solid lines). The coordination number for each Bethe lattice of this figure is set to $z=3$. Next-nearest neighbor hoppings of the plaquette are omitted for convenience.}
   \label{fig:structure}
 \end{figure}
-In order to investigate plaquette correlations exactly, we choose to solve a structure built from 4 bethe lattices, that are plaquette-wise connected, see \reffig{fig:structure}. The coordination number of the Bethe-lattices is set to $z=\infty$, i.e. infininte dimensions. We introduce three types of hopping. The first hopping is the nearest-neighbor hopping $t_b$ within a bethe-lattice, the second $t_p$ connects sites of a bethe-lattice with equivalent points of two neighboring bethe-lattices and the third hopping $t^\prime_p$ connects with equivalent points of the one remaining bethe-lattice. The $t_p$ and $t^\prime_p$ hoppings form plaquettes that interconnect the four bethe-lattices. A closely related model of 2 coupled Bethe lattices has been investigated in the context of the Kondo-RKKY-competetion\cite{Moeller1999} and the singlet-insulator\cite{Hafermann2009}.
+In order to investigate plaquette correlations exactly, we choose to solve a structure built from 4 bethe lattices, that are plaquette-wise connected, see \reffig{fig:structure}. The coordination number of the Bethe-lattices is set to $z=\infty$, i.e. infininte dimensions. We introduce three types of hopping. The first hopping is the nearest-neighbor hopping $t_b$ within a bethe-lattice, the second $t$ connects sites of a bethe-lattice with equivalent points of two neighboring bethe-lattices and the third hopping $t^\prime$ connects with equivalent points of the one remaining bethe-lattice. The $t$ and $t^\prime$ hoppings form plaquettes that interconnect the four bethe-lattices. Below we use the plaquette hopping matrix in site basis
+\begin{align}
+  t_p =
+  \begin{pmatrix}
+    0&t&t&t^\prime\\
+    t&0&t^\prime&t\\
+    t&t^\prime&0&t\\
+    t^\prime&t&t&0
+  \end{pmatrix}.
+\end{align}
+A closely related model of 2 coupled Bethe lattices has been investigated in the context of the Kondo-RKKY-competetion\cite{Moeller1999} and the singlet-insulator\cite{Hafermann2009}.
 
 \section{Method}
 \subsection{Anomalous Field}
@@ -165,7 +177,7 @@ Additionally we use the sum rule with $\{c_{\up i}, c_{\dn j}\}=0$ to determine,
   \nambu{F}(i\omega_n)=\sum^\infty_{k=2} \frac{a_k}{(i\omega_n)^k}.
 \end{equation}
 
-We connect four equivalent Bethe-lattices to build the quadrupolar Bethe-lattice. Therefore, the four sites within a plaquette are symmetric. We apply a discrete Fourier transform to diagonalize the hopping of the plaquette and to identify its orbitals with commonly used $k$-vectors, although translational symmetry is abscent. The orthogonal transformation applied to site-space reads
+We connect four equivalent Bethe-lattices to build the quadruple Bethe-lattice. Therefore, the four sites within a plaquette are symmetric. We apply a discrete Fourier transform to diagonalize the hopping of the plaquette and to identify its orbitals with commonly used $k$-vectors, although translational symmetry is abscent. The orthogonal transformation applied to site-space reads
 \begin{align}
   \label{eq:ktransform}
   \begin{split}
@@ -243,10 +255,8 @@ canonical transformation: particle-hole on spin-down, not unitary thus sse chang
   \Nambu{G}^{-1}(i\omega_n)=i\omega_n+(\mu-t_{p})\sigma_z-t_{b}^2\sigma_z\Nambu{G}(i\omega_n)\sigma_z
 \end{equation}
 TODO\cite{Hafermann2009}\cite{Moeller1999}
-\subsection{Continuous Time Quantum Monte Carlo (CTHYB)}
-TODO
 
-\subsection{Numerics}
+\subsection{Implementation}
 first we converge a solution in the paramagnetic regime, then we run 4 DMFT loops with field, then switch field off and see whether solution is stable
 
 has implications on the initialization of the DMFT-cycles, since the anomalous field is introduced ad-hoc.
@@ -259,7 +269,7 @@ We solve the Anderson impurity model with a continuous time Quantum Monte-Carlo 
 Then we can write the Nambu Greensfunction as
 \begin{equation}
   \label{eq:nambugfph}
-  \Nambu{G}_{ij}(\tau)=\begin{pmatrix}-\expectv{T\tilde{c}_{\up i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}&-\expectv{T\tilde{c}_{\up i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}\\-\expectv{T\tilde{c}_{\dn i}(\tau)\tilde{c}^\dagger_{\up j}(0)}&-\expectv{T\tilde{c}_{\dn i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}\end{pmatrix}.
+  \tilde{\Nambu{G}}_{ij}(\tau)=\begin{pmatrix}-\expectv{T\tilde{c}_{\up i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}&-\expectv{T\tilde{c}_{\up i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}\\-\expectv{T\tilde{c}_{\dn i}(\tau)\tilde{c}^\dagger_{\up j}(0)}&-\expectv{T\tilde{c}_{\dn i}(\tau)\tilde{c}^\dagger_{\dn j}(0)}\end{pmatrix}.
 \end{equation}
 
 Next, we address the Hubbard-Hamiltonian under that transformation. We apply \refeq{eq:particleholetransf} and examine how $t_{ij}$, $\mu$ and $U$ transform. This is simply done by using the anticommutation rules. We end up with
@@ -290,8 +300,9 @@ For the non-interacting case the Greensfunction $\Nambu{G}(i\omega_n)$ of \refeq
 \begin{align}
   \label{eq:uzero}
   \begin{split}
-  \Nambu{G}^0(i\omega_n)&=\sigma_z\frac{\xi+\sqrt{\xi^2 - 4t^2_b}}{2t^2_b},\\
-  \xi&=i\omega_n\sigma_z+\left(\mu - t_p\right).
+    % \Nambu{G}^0(i\omega_n)&=\sigma_z\frac{\xi+\sqrt{\xi^2 - 4t^2_b}}{2t^2_b},\\
+    \Nambu{G}^0(i\omega_n)&=\frac{\sigma_z 2}{\xi-\sqrt{\xi^2 - 4t^2_b}},\\
+    \xi&=i\omega_n\sigma_z+\left(\mu - t_p\right).
   \end{split}
 \end{align}
 The existence of this solutions depends on the fact, that all quantities can be diagonalized in spinor and site -space by a unitary transformation. Furthermore we used $\sigma_z = \sigma^{-1}_z$.
@@ -302,14 +313,36 @@ The existence of this solutions depends on the fact, that all quantities can be 
 \end{figure}
 The spectral function corresponding to $\Nambu{G}^0(i\omega_n)$ at parameters of the quanum ciritcal point is shown in \reffig{fig:nonint}. We observe, that for $t_b\approx 0.3$ states of the $X$ and, by symmetry, $Y$ -orbitals emerge at the Fermi level. At $t_b=1$ the $\Gamma$ and $M$ orbitals touch in proximity to the Fermi level, however the largest contribution at that energy is made by the $X,Y$ orbitals.
 
-In order to identify states of the isolated plaquette with solutions of the quadrupolar Bethe lattice, we have to analyse the particle occupation dependency on the chemical potential and especially the bethe hopping, i.e. $N(\mu,t_b)$. Fortunetaly, for the non-interacting solution we can carry out numerical integration of \refeq{eq:uzero} and create the diagram shown in \reffig{fig:nonintnmutb}. We observe, that the filling depends on the Bethe hopping $t_b$. This effect is strongest in proximity to the $N=3$ region around . Interestingly, in the region $\mu\approx 1$ for a fixed chemical potential the Bethe hopping can increase and decrease the filling. This is shown by minima of the contours in \reffig{fig:nonintnmutb}. The mechanism is explained by the broadening of bands below as well as above Fermi level becoming electron and hole -doped throughout that process.
+In order to identify states of the isolated plaquette with solutions of the quadruple Bethe lattice, we have to analyse the particle occupation dependency on the chemical potential and especially the bethe hopping, i.e. $N(\mu,t_b)$. Fortunetaly, for the non-interacting solution we can carry out numerical integration of \refeq{eq:uzero} and create the diagram shown in \reffig{fig:nonintnmutb}. We observe, that the filling depends on the Bethe hopping $t_b$. This effect is strongest in proximity to the $N=3$ region around . Interestingly, in the region $\mu\approx 1$ for a fixed chemical potential the Bethe hopping can increase and decrease the filling, thereby also showing re-entrance behavior. This is shown by minima of the contours in \reffig{fig:nonintnmutb}. The mechanism is explained by the broadening of bands below as well as above Fermi level becoming electron and hole -doped throughout that process. The main trend of increasing Bethe hopping is the suppression of the $N=3$ subspace. However, it is still present at $t_b=1$. The point with main contributions of the $N=3$ sector shifts to larger $\mu$ with increasing $t_b$. Furthermore, the next-nearest neighbor hopping of the plaquette $t^\prime$ enlarges the $N=3$ region to larger and smaller $\mu$ as well as to larger $t_b$.
 \begin{figure}[th]
   \includegraphics{noninteracting/n_mu_tb}
   \caption{Particle occupation dependency on the chemical potential and the Bethe hopping $N(\mu,t_b)$ for the non-interacting case.}
   \label{fig:nonintnmutb}
 \end{figure}
+ \section{Normalstate}
+\begin{figure}[th]
+  \includegraphics{tb03b100ucritmaxent}
+  \caption{Density of states for different cluster fillings corresponding to $\mu \in \{0.32,0.37,0.42,0.47,0.52\}$. The hoppings are $t_b=0.3, t=-1, t^\prime= 0.3$, the Hubbard interaction is $U=2.784$ and the inverse temperature $\beta=100$. The inset shows the complete single particle density of states of the plaquette.}
+  \label{fig:dosnormalstate}
+\end{figure}
+instability close to $N=3.4$ corresponding to $\delta=...$ optimal doping
+pseudogap
+plot also greensfunction of tau to show main contribution at FL by $X$ and $Y$; orbitally resolved g(0) as function of filling
+
+sign larger than .96
+mixing
+Impose up dn xy symmetries
+TODO static observables
+
+\section{Superconducting State}
+\begin{figure}[th]
+  \includegraphics{hlrn/sco_dens_mu}
+  \caption{(Left axis) Superconducting order parameter as function of $\mu$ for the critical $U$. (Right axis) Particle density of the normalstate.}
+  \label{fig:scodensmu}
+\end{figure}
 
 \section{Discussion}
+Rozenberg half-filled hubbard htsc
 TODO
 
 \bibliography{betheplaquette}
